# distributed-storage

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: 2acd5e9b-4468-4fed-a7a0-31714f38d9aa  2c0286ab-6913-4e45-889a-5140057e729c  4a3ef2c3-ade0-4e94-8d82-f66c2be34f00  51877db7-83fb-43c4-bb7e-d9edb514a713  5ad2c8d0-4f7a-4ce9-8b56-47238a87cb26  604f1d99-d2a0-41f8-ba69-acb6421f2bb9  6caa1654-7292-43ca-906d-9279d6f42b5e  72e6bc39-0c3e-4edb-87d6-80cf5e337055  738067d1-359a-419e-967e-061128b3ca6f  96855a85-b392-43c9-b304-00ae5974d0dd  9f84db6f-4f29-43d4-a3d5-d7dc70ec4e2f  ac211671-5d88-495a-8d5f-2e0474e43d8f  b2255368-dbb8-4381-9627-cf9dbfff66d0  c418e75e-c6c6-4cbd-bfcb-7691c3d6f301  c96e7620-d6d1-4d8a-8992-95a7a46b299d  d16475b8-8f21-498a-ac57-5713e8815bb3  d8731281-d2f8-4312-867d-cbac9c9fdd1e  ec80b5e5-f2c0-40c9-8e8d-b9f2dbd9851f
gateway/: main.py
metadata/: database.py  main.py  models.py  schemas.py
postgress/: .env  README.md  docker-compose.yml
storage_node/: main.py
