[project]
name = "distributed-storage"
version = "0.1.0"
description = "Distributed storage system with metadata management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.30.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.20",
]
